tests/ui/frontmatter/hyphen-in-infostring-leading.rs
--- -toml
//~^ ERROR: invalid infostring for frontmatter
---

// infostrings cannot have leading hyphens

fn main() {}
